[package]
name = "less-avc"
description = "less Advanced Video Coding (H.264) encoding"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "MIT/Apache-2.0"
categories = [ "multimedia::video" ]

[dependencies]
bitvec = "1.0.1"
thiserror = "1"

[dev-dependencies]
h264-reader = "0.6.0"

[features]
backtrace = []

[workspace]

members = [
    "testbench",
]