[package]
name = "less-avc"
description = "less Advanced Video Coding (H.264) encoding"
version = "0.1.5"
edition = "2021"
authors = ["Andrew Straw <strawman@astraw.com>"]
license = "MIT/Apache-2.0"
categories = ["multimedia::video"]
repository = "https://github.com/strawlab/less-avc"
rust-version = "1.73"

[dependencies]
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
memchr = { version = "2.5.0", default-features = false }

[dev-dependencies]
h264-reader = "0.7.0"

[features]
default = ["std"]

backtrace = []
std = []

[workspace]

members = ["testbench"]
