[package]
name = "testbench"
description = "testing and benchmarks for the less-avc crate"
version = "0.1.0"
edition = "2021"

[dependencies]
less-avc = {path=".."}
anyhow = "1"
openh264 = "0.3.0"
tempfile = "3.3.0"
y4m = {git="https://github.com/strawlab/y4m", rev="6cc4bf4e85ac151af1568ad5291f238c9bb51f32"}
tiff = "0.7.4"
chrono = "0.4.23"

[features]
backtrace = ["less-avc/backtrace"]
