[package]
name = "testbench"
description = "testing and benchmarks for the less-avc crate"
version = "0.1.0"
edition = "2021"

[dependencies]
less-avc = {path=".."}
anyhow = "1"
openh264 = "0.3.0"
tempfile = "3.3.0"
y4m = "0.8.0"
tiff = "0.7.4"
chrono = "0.4.23"
semver = "1.0.14"

[features]
backtrace = ["less-avc/backtrace"]
